k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app-deployment
spec:
  replicas: 1 # Set to 1 for a single replica
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-app
          image:  rameshch07/node:node-app # Replace with your Docker image URL
          ports:
            - containerPort: 3000 # Port your Node.js app is listening on
